--- a/src/public/styles/content.css
+++ b/src/public/styles/content.css
@@ -1,4 +1,5 @@
 .panels {
+    position: fixed;
     width: 100%;
     height: 100%;
     display: flex;
@@ -15,7 +16,6 @@
     flex-direction: column;
     width: 35vw;
     height: 80vh;
-    border: 1px solid black;
 }
 
 .container {
@@ -56,19 +56,34 @@
     justify-content: center;
     width: calc(35vw * 1.618);
     height: 80vh;
-    border: 1px solid black;
 }
 
 .button {
-    height: 6vh;
-    border: 1px solid black;
+    height: 3rem;
+    width: 11rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 5px;
 }
 
 .button span {
     font-size: 1.5rem;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 0.95);
+}
+
+.button:hover {
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.8);
+    transition: backdrop-filter 0.3s;
+    transition: -webkit-backdrop-filter 0.3s;
+    transition: box-shadow 0.5s;
+    cursor: pointer;
 }
 
 hr {
