Added Repsonsive Design

--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -19,6 +19,8 @@ html, body {
 
 .root .background {
     position: fixed;
+    top: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
