--- a/src/public/styles/content.css
+++ b/src/public/styles/content.css
@@ -1,6 +1,6 @@
 @media (orientation: landscape) {
     .panels {
-        position: fixed;
+        position: absolute;
         width: 100%;
         height: 100%;
         display: flex;
